@@ -67,26 +67,6 @@ Description: Safe and easy web browser from Mozilla
  enhanced security features including protection from online identity theft,
  and integrated search let you get the most out of the web.
 
-Package: firefox-trunk-gnome-support
-Architecture: any
-Section: gnome
-Depends: ${shlibs:Depends}, 
-	${misc:Depends},
-	libnotify4 | libnotify1,
-	firefox-trunk
-Provides: ${app:Provides}
-	${transitional:Provides}
-Replaces: ${transitional:Replaces}
-Conflicts: ${app:Conflicts},
-	${transitional:Conflicts}
-Description: Safe and easy web browser from Mozilla - GNOME support
- Firefox delivers safe, easy web browsing. A familiar user interface,
- enhanced security features including protection from online identity theft,
- and integrated search let you get the most out of the web.
- .
- This package depends on the GNOME libraries which allow Firefox to take
- advantage of technologies such as GConf, GIO libnotify
-
 Package: firefox-trunk-dbg
 Architecture: any
 Section: debug
@@ -153,7 +133,6 @@ Priority: extra
 Depends: ${shlibs:Depends},
 	${misc:Depends},
 	firefox-trunk (= ${binary:Version}),
-	firefox-trunk-gnome-support (= ${binary:Version}),
 	firefox-trunk-locale-af (= ${binary:Version}), firefox-trunk-locale-ar (= ${binary:Version}), firefox-trunk-locale-ast (= ${binary:Version}), firefox-trunk-locale-be (= ${binary:Version}), firefox-trunk-locale-bg (= ${binary:Version}), firefox-trunk-locale-bn (= ${binary:Version}), firefox-trunk-locale-br (= ${binary:Version}), firefox-trunk-locale-bs (= ${binary:Version}), firefox-trunk-locale-ca (= ${binary:Version}), firefox-trunk-locale-cs (= ${binary:Version}), firefox-trunk-locale-cy (= ${binary:Version}), firefox-trunk-locale-da (= ${binary:Version}), firefox-trunk-locale-de (= ${binary:Version}), firefox-trunk-locale-el (= ${binary:Version}), firefox-trunk-locale-en (= ${binary:Version}), firefox-trunk-locale-eo (= ${binary:Version}), firefox-trunk-locale-es (= ${binary:Version}), firefox-trunk-locale-et (= ${binary:Version}), firefox-trunk-locale-eu (= ${binary:Version}), firefox-trunk-locale-fa (= ${binary:Version}), firefox-trunk-locale-fi (= ${binary:Version}), firefox-trunk-locale-fr (= ${binary:Version}), firefox-trunk-locale-fy (= ${binary:Version}), firefox-trunk-locale-ga (= ${binary:Version}), firefox-trunk-locale-gd (= ${binary:Version}), firefox-trunk-locale-gl (= ${binary:Version}), firefox-trunk-locale-gu (= ${binary:Version}), firefox-trunk-locale-he (= ${binary:Version}), firefox-trunk-locale-hi (= ${binary:Version}), firefox-trunk-locale-hr (= ${binary:Version}), firefox-trunk-locale-hu (= ${binary:Version}), firefox-trunk-locale-hy (= ${binary:Version}), firefox-trunk-locale-id (= ${binary:Version}), firefox-trunk-locale-is (= ${binary:Version}), firefox-trunk-locale-it (= ${binary:Version}), firefox-trunk-locale-ja (= ${binary:Version}), firefox-trunk-locale-kk (= ${binary:Version}), firefox-trunk-locale-kn (= ${binary:Version}), firefox-trunk-locale-ko (= ${binary:Version}), firefox-trunk-locale-ku (= ${binary:Version}), firefox-trunk-locale-lg (= ${binary:Version}), firefox-trunk-locale-lt (= ${binary:Version}), firefox-trunk-locale-lv (= ${binary:Version}), firefox-trunk-locale-mai (= ${binary:Version}), firefox-trunk-locale-mk (= ${binary:Version}), firefox-trunk-locale-ml (= ${binary:Version}), firefox-trunk-locale-mr (= ${binary:Version}), firefox-trunk-locale-nb (= ${binary:Version}), firefox-trunk-locale-nl (= ${binary:Version}), firefox-trunk-locale-nn (= ${binary:Version}), firefox-trunk-locale-nso (= ${binary:Version}), firefox-trunk-locale-or (= ${binary:Version}), firefox-trunk-locale-pa (= ${binary:Version}), firefox-trunk-locale-pl (= ${binary:Version}), firefox-trunk-locale-pt (= ${binary:Version}), firefox-trunk-locale-ro (= ${binary:Version}), firefox-trunk-locale-ru (= ${binary:Version}), firefox-trunk-locale-si (= ${binary:Version}), firefox-trunk-locale-sk (= ${binary:Version}), firefox-trunk-locale-sl (= ${binary:Version}), firefox-trunk-locale-sq (= ${binary:Version}), firefox-trunk-locale-sr (= ${binary:Version}), firefox-trunk-locale-sv (= ${binary:Version}), firefox-trunk-locale-ta (= ${binary:Version}), firefox-trunk-locale-te (= ${binary:Version}), firefox-trunk-locale-th (= ${binary:Version}), firefox-trunk-locale-tr (= ${binary:Version}), firefox-trunk-locale-uk (= ${binary:Version}), firefox-trunk-locale-vi (= ${binary:Version}), firefox-trunk-locale-zh-hans (= ${binary:Version}), firefox-trunk-locale-zh-hant (= ${binary:Version}), firefox-trunk-locale-zu (= ${binary:Version}) ,
 	python,
 	dbus-x11,
@@ -193,6 +172,7 @@ Description: Safe and easy web browser from Mozilla - testsuite
 
 # Transitional packages below here
 
+# Can be dropped after 14.04
 Package: firefox-trunk-globalmenu
 Architecture: any
 Section: oldlibs
