@@ -67,26 +67,6 @@ Description: Safe and easy web browser from Mozilla
  enhanced security features including protection from online identity theft,
  and integrated search let you get the most out of the web.
 
-Package: @MOZ_PKG_NAME@-gnome-support
-Architecture: any
-Section: gnome
-Depends: ${shlibs:Depends}, 
-	${misc:Depends},
-	libnotify4 | libnotify1,
-	@MOZ_PKG_NAME@
-Provides: ${app:Provides}
-	${transitional:Provides}
-Replaces: ${transitional:Replaces}
-Conflicts: ${app:Conflicts},
-	${transitional:Conflicts}
-Description: Safe and easy web browser from Mozilla - GNOME support
- Firefox delivers safe, easy web browsing. A familiar user interface,
- enhanced security features including protection from online identity theft,
- and integrated search let you get the most out of the web.
- .
- This package depends on the GNOME libraries which allow Firefox to take
- advantage of technologies such as GConf, GIO libnotify
-
 Package: @MOZ_PKG_NAME@-dbg
 Architecture: any
 Section: debug
@@ -153,7 +133,6 @@ Priority: extra
 Depends: ${shlibs:Depends},
 	${misc:Depends},
 	@MOZ_PKG_NAME@ (= ${binary:Version}),
-	@MOZ_PKG_NAME@-gnome-support (= ${binary:Version}),
 	@MOZ_LOCALE_PKGS@,
 	python,
 	dbus-x11,
@@ -193,6 +172,7 @@ Description: Safe and easy web browser from Mozilla - testsuite
 
 # Transitional packages below here
 
+# Can be dropped after 14.04
 Package: @MOZ_PKG_NAME@-globalmenu
 Architecture: any
 Section: oldlibs
