@@ -1,1 +1,0 @@
-@MOZ_LIBDIR@/components/libmozgnome.so
